# py-jsbot

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  app.py  docker-compose.yml  pyproject.toml  socket_app.py
db/sqlite3/: migrations.sql  todo.db
docker/: Dockerfile  jsbot.conf.template  uwsgi.ini
src/: common.py  my.py  settings.py  todo.py  todo_slack_util.py
src/slack_block_kit/: block.py  element.py  object.py
