[tool.poetry]
name = "pyjsbot"
version = "0.1.0"
description = ""
authors = ["jongsoo.bae <ocpek@kakao.com>"]

[tool.poetry.dependencies]
python = "^3.9"
nodeenv = "^1.6.0"
pre-commit = "^2.17.0"
pydantic = "^1.9.0"
pyproject-flake8 = "^0.0.1-alpha.2"
python-dotenv = "^0.19.2"
slack-bolt = "^1.12.0"
uWSGI = "^2.0.20"
CherryPy = "^18.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
exclude = '/(\.venv|venv|\.env|env|migrations)/'

[tool.isort]
line_length = 120
profile = "black"
skip_glob = "^(manage.py|migrations)"
src_paths = ["app"]

[tool.flake8]
exclude = ".git,*/migrations/*"
max-line-length = 120
extend-ignore = "E722,W503,E203"
